# llmwiki

./: .gitignore  LICENSE  README.md  llmwiki.yaml  pyproject.toml
categories/: defaults.yaml
src/llmwiki/: __init__.py  __main__.py  cli.py  config.py  constants.py  generation.py  ingestion.py  interactive.py  retrieval.py
src/llmwiki/db/: __init__.py  connection.py  schema.sql
