[project]
name = "llmwiki"
version = "0.1.0"
description = "An LLMWiki CLI Powered by Ollama inspired by Andrej Karpathy"
license = {text = "MIT"}
authors = [
    {name = "Stafford Lumsden", email = "staffordlumsden@example.com"}
]
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "rich>=14.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "ollama>=0.6.0",
    "pypdf>=5.0",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "markdown-it-py>=3.0",
    "pick>=2.2.0",
    "prompt-toolkit>=3.0",
    "pyfiglet>=1.0.0",
]

[project.optional-dependencies]
watch = [
    "watchfiles>=1.1",
]
desktop = [
    "watchfiles>=1.1",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.scripts]
llmwiki = "llmwiki.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llmwiki"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
